--- a/src/sass/commons/pm-button.scss
+++ b/src/sass/commons/pm-button.scss
@@ -237,10 +237,6 @@
         border-radius: 0;
         margin: 0 !important; /* overide unknow margin for appConfigBody-is-mobile */
         border: 0;
-        &.pm_button {
-            height: 33px;
-            line-height: 36px;
-        }
     }
 
     a,
