--- a/src/sass/commons/pm-form.scss
+++ b/src/sass/commons/pm-form.scss
@@ -202,7 +202,6 @@
         // Set the error container div to have the same height as the error message will have.
         // Assume that the error message will fit on one row.
         & + [ng-messages], & + [ng-messages] p {
-            height: 1em;
             margin: 0.6em 0 0.8em 0;
         }
         // Display the error messages with opacity to prevent reflow.
